css/main.css
* {
  box-sizing: border-box;
}

@media screen and (max-width: 480px) {
  #list-monkey-subtitle:after {
    content: <span>"Testing"</span>;
  }
}

.large-header {
  position: relative;
  width: 100%;
  height: 80vh;
  background: #111;
  overflow: hidden;
  background-size: cover;
  background-position: center center;
  z-index: 1;
}

.demo .large-header {
  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
}

.main-title {
  position: absolute;
  margin: 0;
  padding: 0;
  color: #f9f1e9;
  text-align: center;
  top: 47%;
  left: 50%;
  -webkit-transform: translate3d(-50%, -50%, 0);
  transform: translate3d(-50%, -50%, 0);
  width: 90%;
}

.demo .main-title {
  text-transform: uppercase;
  font-size: 4.2em;
  letter-spacing: 0.1em;
  font-weight: 900;
}

.main-title .thin, .subtitle .thin {
  font-weight: 100;
}

.subtitle {
  position: absolute;
  margin: 0;
  padding: 0;
  color: #f9f1e9;
  text-align: center;
  top: 57%;
  left: 49.4%;
  -webkit-transform: translate3d(-50%, -50%, 0);
  transform: translate3d(-50%, -50%, 0);
  font-size: 44.8px;
  font-size: 2.8rem;
  font-weight: 900;
  width: 90%;
}

.intro-navigate-button {
  position: absolute;
  margin: 0;
  padding: 0;
  color: #f9f1e9;
  text-align: center;
  top: 86%;
  left: 48.75%;
  -webkit-transform: translate3d(-50%, -50%, 0);
  transform: translate3d(-50%, -50%, 0);
  font-size: 19.2px;
  font-size: 1.2rem;
  font-weight: 100;
  z-index: 10;
  border: 1px solid gray;
  padding: 1%;
  border-radius: 17px;
  -webkit-animation: upsrcoll 2.5s 1;
          animation: upsrcoll 2.5s 1;
  text-decoration: none;
}

@-webkit-keyframes upsrcoll {
  0% {top: 123%}
  100% {top: 85.8%}
}

@keyframes upsrcoll {
  0% {top: 123%}
  100% {top: 85.8%}
}

.intro-navigate-button:hover {
  -webkit-transition: all .5s ease;
  transition: all .5s ease;
  background-color: rgba(167, 167, 167, 0.2)
}

@media  screen and (max-width: 768px) {
  .demo .main-title {
    font-size: 3em;
  }
}

html {
  scroll-behavior: smooth;
}

.demo .large-header {
  z-index: 10;
  font-family: 'Orbitron', sans-serif;
}

body {
  background-position: center; /* Center the image */
  background-size: cover;
  background-color: black;
  color: white;
  font-family: 'Open Sans', sans-serif;
}

section {
  min-height: 100vh;
  border-top: 1px white solid;
  border-bottom: 1px white solid;
  margin-left: 75px;

}

#welcome {
  margin-left: 0px;
  max-width: 100%;
  border: none;
}

.sidebar {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  left: 0;
  overflow-x: hidden;
  z-index: 1;
  height: 100vh;
  width: 75px;
  background-color: rgb(255, 255, 255, 0.2);
  border: none;
  margin: 0;
  margin-top: -101vh;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
}

.sidebar:hover {
  background-color: rgb(100, 100, 100, 0.75);
}

.sidebar.open{
  width: 175px;
  background-color: rgb(100, 100, 100, 0.75);
}

.hamburger-icon {
  margin-bottom: 30px;
  background: url("../img/sidebar/hamburger_icon.png");
  height: 35px;
  width: 35px;
  background-size: 90%;
  background-position: center;
  background-repeat: no-repeat;
  margin: 30px 0;
  position: absolute;
  right: 20px;
  -webkit-transition: all .15s ease;
  transition: all .15s ease;
}

.hamburger-icon:hover {
  background-size: 100%;
}

.sidebar-navigation {
  margin-top: 95px;
}

.sidebar a {
  display: block;
  height: 50px;
  width: 50px;
  background-size: 90%;
  background-position: center;
  background-repeat: no-repeat;
  margin: 35px 12.5px;
  position: absolute;
  -webkit-transition: all .15s ease;
  transition: all .15s ease;
}

.sidebar a:hover {
  background-size: 100%;
}

.navigate {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin-bottom: 90px;
}

.projects-navigate {
  margin-top: 30px;
}

.ready-button {
  position: -webkit-sticky;
  position: sticky;
  display: block;
  top: 3%;
  left: 94.5%;
  text-decoration: none;
  color: white;
  width: 5%;
  border: 1px solid white;
  text-align: center;
  padding: 0.4%;
  border-radius: 16px;
  font-size: 16px;
}

.patch {
  height: 95px;
  width: 42px;
  background-color: black;
  position: -webkit-sticky;
  position: sticky;
  top: 2%;
  left: 94%;
}

.navigate .navigate-text {
  color: white;
  font-size: 16px;
  width: 75px;
  height: auto;
  text-decoration: none;
  margin-right: 20px;
  position: absolute;
  left: 68px;
  -webkit-transition: all .15s ease;
  transition: all .15s ease;
}

.navigate .navigate-text:hover {
  font-size: 17px;
  width: 100px;
}

.about-icon {
  background: url("../img/sidebar/about-icon-white.png")
}

.projects-icon {
  background: url("../img/sidebar/projects-icon-white.png")
}

.links-icon {
  background: url("../img/sidebar/links-icon-white.png")
}

.contact-icon {
  background: url("../img/sidebar/contact-icon-white.png")
}

.welcome-icon {
  background: url("../img/sidebar/welcome-icon-white.png")
}


.about,
.projects,
.boring-stuff,
.contact {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding: 4% 6% 0;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.about {
}

.about-text {
  margin-left: 9%;
  max-width: 50%;

}
.about h1 {
  font-size: 45px;
}

.about p {
  font-size: 18px;
}

.headshot {
  background-position: 50% 38%; /* Center the image */
  background-image: url("https://i.imgur.com/EjGcJjH.jpg");
  background-size: 135%;
  height: 30vw;
  width: 30vw;
  border-radius: 50%;
  margin: 2% 0 3%;
}

.technologies {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  width: 100%;
}
/* ... */

